# painscope

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deploy/: docker-entrypoint-web-mcp.sh  vps-deploy.sh
src/painscope/: cli.py  config.py  mcp_server.py  storage.py  topics.py
src/painscope/adapters/: __init__.py  appstore.py  base.py  googleplay.py  producthunt.py  reddit.py  xpoz_reddit.py  youtube.py
src/painscope/llm/: client.py
src/painscope/output/: markdown.py
src/painscope/pipeline/: cluster.py  embed.py  orchestrator.py  preprocess.py  summarize.py  trend.py
src/painscope/profiles/: global.yaml  tr.yaml
src/painscope/web/: __init__.py  app.py  jobs.py  schemas.py
src/painscope/web/static/: app.js  index.html  styles.css
src/painscope/web/static/js/routes/: dashboard.js  history.js  job.js  new-scan.js  saved.js  scan-detail.js
src/painscope/web/static/js/services/: api.js
src/painscope/web/static/js/state/: store.js
src/painscope/web/static/js/ui/: components.js
src/painscope/web/static/js/utils/: format.js  metrics.js
src/painscope/web/static/styles/: base.css  layout.css
src/painscope/web/static/styles/components/: all.css
tests/: test_web_api.py
